--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-build/
-node_modules/
+build
+package-lock.json
+.git
+CVS
+.svn
+.hg
+.lock-wscript
+.wafpickle-N
+.*.swp
+.DS_Store
+._*
+npm-debug.log
+.npmrc
+node_modules
+config.gypi
+*.orig
 package-lock.json
